--- a/Crawly-Web/src/main/resources/static/extract.html
+++ b/Crawly-Web/src/main/resources/static/extract.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Crawly | EXTRACT</title>
 	<link rel="stylesheet" href="css/fontello.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/jquery-3.3.1.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<style type="text/css">
 	#reducir{
 		width: 70%;
@@ -70,9 +70,9 @@
 			<form id="upload-file-form">
 				<label for="upload-file-input" class="inputlabel">
 					<i class="icon-pdf"></i>
-					<span id="label-span"><u>Choose file(s)</u></span>
+					<span id="label-span"><u>Choose file</u></span>
 				</label>
-				<input id="upload-file-input" accept=".pdf" type="file" name="uploadfile" accept="*"multiple />
+				<input id="upload-file-input" accept=".pdf" type="file" name="uploadfile"  />
 			</form>
 		</div>
 	</div>
