--- a/Crawly-Web/src/main/resources/static/pequenaPrueba.html
+++ b/Crawly-Web/src/main/resources/static/pequenaPrueba.html
@@ -9,61 +9,36 @@
 </style>
 </head>
 <body>
-	<div id="melajuego">
-		<form id="upload-file-form">
-			<label for="upload-file-input" class="inputlabel">
-				<i class="icon-pdf"></i>
-				<span id="label-span"><u>Choose file</u></span>
-			</label>
-			<input id="upload-file-input" accept=".pdf" type="file" name="uploadfile" accept="*"multiple />
-		</form>
-	</div>
-	<div id="chooseAllOptions">
-		<div id="misNumeros">
-			<span id="textoDeNumeros"></span>
-			<input type="text" id="numbers" name="uname" placeholder=" Example: 1-3,5"/>
-		</div>
-		<input type="checkbox" id="fixear" value="1">Fix
-		<br>
-		<input type="checkbox" id="allResources" value="1">All resources
-		<button id="vamosAEnviar" type="button" onclick="conectarseRead()">Click Me!</button> 
-	</div>
-	<div id="myLoader2"></div>
+	<input type="text" id="allResources">
+	<input type="text" id="user">
+	<input type="text" id="password">
+	<button id="vamosAEnviar" type="button" onclick="comporbarCredenciales()">Click Me!</button> 
 
 	<script type="text/javascript">
-		function conectarseRead() {
-			var fixear = document.getElementById("fixear").checked;
-			var allResources = document.getElementById("allResources").checked;
-			uploadFile(fixear,allResources);
+		function comporbarCredenciales() {
+			var url = document.getElementById('allResources').value;
+			var USERNAME = document.getElementById('user').value;
+			var PASSWORD = document.getElementById('password').value;
+			$.ajax({
+				contentType: 'application/json',
+				type: 'GET',
+				dataType: 'json',
+   				url: 'http://librairy.linkeddata.es/jgalan-topics/documents',
+    data: {
+    	username: "jgalan",
+    	password: "oeg2018"
+    },
+    dataType: "json",
+    error: function (data) {
+    	console.log(data);
+    },
+    success: function (data) {
+    	console.log(data);
+    }
+});
 		}
 
-		function uploadFile(fixear,allResources) {
-			var ajaxData = new FormData();
-			var files = $('#upload-file-input').prop('files');
-			console.log("Ver todo esto " + files);
-			for(var i=0; i < files.length; i++){
-				ajaxData.append('files[' + i + ']', files[i]);
-			}
-			ajaxData.append("file", files);
-			$.ajax({
-				url: "/uploadFile2",
-				type: "POST",
-				data: ajaxData,
-				enctype: 'multipart/form-data',
-				processData: false,
-				contentType: false,
-				cache: false,
-				success: function (response) {
-
-				},
-				error: function (response) {
-
-				}
-			});
-    	} // function uploadFile
-
-
-    </script>
+	</script>
 </body>
 </html>
 
